name:                cerealize
version:             0.1.0.0
synopsis:            Craig reads a book only to discover that he is the book.
homepage:            https://github.com/evturn/cerealize#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Turner
maintainer:          ev@evturn.com
copyright:           Copyright (c) 2017 Evan Turner
category:            Very Cool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:         Served on a bed of lettuce <https://github.com/evturn/cerealize>

library
  hs-source-dirs:      src
  exposed-modules:     Cereal
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cerealize-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cerealize
  default-language:    Haskell2010

test-suite cerealize-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cerealize
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/evturn/cerealize
